# cse252c-final

./: readme.txt
res/: kitti_tn_26_v_3D.txt  kitti_tn_27_g_3D.txt  kitti_tn_27_v_3D.txt  kitti_tn_v_3D.txt  kitti_tt_26_v_3D.txt  kitti_tt_27_fix10_g_3D.txt  kitti_tt_27_fix10_v_3D.txt  kitti_tt_27_v_3D.txt  kitti_tt_27u_g_3D.txt  kitti_tt_27u_v_3D.txt  kitti_tt_v_3D.txt  mav_tn_g_3D.txt  mav_tn_v_3D.txt  mav_tt_g_3D.txt  mav_tt_v_3D.txt
src/: CorrelationFunction.py  _correlation_grad.py  flownet.py  flownet_resume.py  flownet_resume_6.py  kitti_predict.py  mav_predict.py  plot3D.py  testModel.py  test_losses_append.txt
src/mav0/cam0/: cam0_align.csv
src/mav0/imu0/: imu0_align.csv
tf/: CMakeLists.txt  CorrelationFunction.py  build_correlation_gpu.sh  correlation.cc  correlation_gpu.cu.cc  correlation_grad.cc  correlation_grad_gpu.cu.cc  correlation_tests.py  test_correlation.py
